WAC-60- Fix overlapping insights content

--- a/ckanext/who_afro/assets/css/who-afro.css
+++ b/ckanext/who_afro/assets/css/who-afro.css
@@ -887,8 +887,10 @@ p.small {
     .insight-small-rect:last-child {
         margin-top: 24px;
     }
-    .insights .container {
-        min-height: 1750px;
+    .after-insights {
+        padding-top: 85%;
+        background: var(--who-blue-ten-percent);
+        min-height: 418px;
     }
 
 }
